# MyStudioLab

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json
crates/audio/: Cargo.toml
crates/audio/src/: capturer.rs  error.rs  lib.rs
crates/capture/: Cargo.toml
crates/capture/src/: error.rs  frame.rs  lib.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs  recorder.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/encode/: Cargo.toml  build.rs
crates/encode/src/: encoder.rs  error.rs  hw_accel.rs  lib.rs  muxer.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  main.rs  state.rs  theme.rs  widgets.rs
crates/gui/src/screens/: home.rs  settings.rs
crates/zoom/: Cargo.toml
crates/zoom/src/: easing.rs  error.rs  lib.rs  processor.rs  tracker.rs
