[package]
name = "capture"
version.workspace = true
edition.workspace = true
description = "Cross-platform screen capture module for MyStudioLab"

[dependencies]
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
image.workspace = true

# Windows: use windows-capture (Windows.Graphics.Capture API) directly.
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.5.0"

# macOS / Linux: use scap (ScreenCaptureKit / PipeWire).
[target.'cfg(not(target_os = "windows"))'.dependencies]
scap.workspace = true
